--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
+    "@heroicons/vue": "^2.0.18",
     "axios": "^1.4.0",
     "vue": "^3.2.36"
   },
